WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132822
REGRESSION (
r159560
): Text clips on tile border if line-height < font-size
https://bugs.webkit.org/show_bug.cgi?id=132822
Summary
REGRESSION (r159560): Text clips on tile border if line-height < font-size
Antti Koivisto
Reported
2014-05-12 06:41:02 PDT
Something like div { line-height:10px; font-size:20px } may cause clipping on tile borders.
Attachments
patch
(22.57 KB, patch)
2014-05-12 06:57 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-05-12 06:41:24 PDT
<
rdar://problem/16709166
>
Antti Koivisto
Comment 2
2014-05-12 06:57:21 PDT
Created
attachment 231294
[details]
patch
Andreas Kling
Comment 3
2014-05-12 10:38:59 PDT
Comment on
attachment 231294
[details]
patch r=me
Antti Koivisto
Comment 4
2014-05-12 10:57:08 PDT
https://trac.webkit.org/r168624
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug