REGRESSION (r159560): Text clips on tile border if line-height < font-size https://bugs.webkit.org/show_bug.cgi?id=132822

Reviewed by Andreas Kling.

Source/WebCore:

The first line of simple line layout run range was miscomputed.

Test: fast/text/simple-lines-range-low-line-height.html

* rendering/SimpleLineLayoutResolver.h:
(WebCore::SimpleLineLayout::RunResolver::lineIndexForHeight):

    Lines may overlap if line-height < font-size. Apply different adjustment when searching for range begin
    so that overflowing earlier lines are taken into account.

(WebCore::SimpleLineLayout::RunResolver::rangeForRect):

LayoutTests:

* fast/text/simple-lines-range-low-line-height-expected.html: Added.
* fast/text/simple-lines-range-low-line-height.html: Added.



Canonical link: https://commits.webkit.org/150866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168624 268f45cc-cd09-0410-ab3c-d52691b4dbfc